.parquet addition and code fix.

--- a/code/digitspan/overview.ipynb
+++ b/code/digitspan/overview.ipynb
@@ -18,18 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "3b023c6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import mne\n",
@@ -49,18 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "4cfd24a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read data\n",
-    "data = pd.read_parquet('./sub-032_task-rest_ecg.parquet')\n",
-    "\n",
     "# constants\n",
     "sampling_rate = 1000\n",
     "\n",
-    "ecg_signal = data['ECG']\n"
+    "# read data\n",
+    "data = pd.read_parquet('./rest_data/sub-034_task-rest_ecg_rest.parquet')\n",
+    "ecg_signal = data['ECG']"
    ]
   },
   {
@@ -72,28 +63,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4871237",
+   "metadata": {},
+   "source": [
+    "## ECG process"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c1209eb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "signals, info = nk.ecg_process(data['ECG'], sampling_rate=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "3e1ab26f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "signals, info = nk.ecg_process(data['ECG'], sampling_rate=1000, method='pantompkins1985')\n",
     "nk.ecg_plot(signals, info)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "165eff08",
+   "metadata": {},
+   "source": [
+    "##  HRV indices"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "d7f41016",
    "metadata": {},
    "outputs": [
@@ -562,101 +560,101 @@
          "type": "float"
         }
        ],
-       "ref": "e7cbc0cd-36dd-459c-aefb-f2cc08bbe5c2",
+       "ref": "7be3c9e1-7c8d-478c-b1f5-39b95657d1a4",
        "rows": [
         [
          "0",
-         "741.5704918032787",
-         "68.27235354066109",
-         "18.412394999881506",
-         "66.35195188610918",
+         "792.7752808988764",
+         "82.66010931751303",
+         "48.48291649430066",
+         "71.05901702360002",
          null,
          null,
          null,
          null,
-         "50.985711362673904",
-         "51.067603338464565",
-         "0.09206454989146486",
-         "0.06875369493019043",
-         "733.0",
-         "59.303999999999995",
-         "0.08090586630286493",
-         "81.0",
-         "1.339048759269495",
-         "688.0",
-         "782.2",
-         "20.0",
-         "58.36065573770492",
-         "591.0",
-         "974.0",
-         "15.25",
-         "101.5625",
+         "51.4414039963217",
+         "51.530177289756054",
+         "0.10426675920544609",
+         "0.06488774970127176",
+         "784.0",
+         "88.95599999999999",
+         "0.1134642857142857",
+         "119.5",
+         "1.6068789515041935",
+         "717.2",
+         "874.0",
+         "34.08239700374532",
+         "73.03370786516854",
+         "610.0",
+         "1004.0",
+         "20.53846153846154",
+         "148.4375",
          null,
-         "0.004195273235186098",
-         "0.01179573081575313",
-         "0.017396156642232905",
-         "0.0004706181740908852",
-         "0.033857778867263016",
-         "0.6780653369788854",
-         "0.3483905681467601",
-         "0.5138008819312478",
-         "-4.051505979790107",
-         "36.11024861957306",
-         "89.29605616611106",
-         "0.4043879446635331",
-         "10130.074273105729",
-         "2.472872926100801",
-         "4.712582739555213",
-         "883.2711988030102",
-         "0.36065573770491804",
-         "0.34797297297297297",
-         "0.3786407766990291",
-         "0.010869565217391304",
-         "50.66468346193176",
-         "50.762459653173465",
-         "50.58161178363116",
-         "45.94594594594595",
-         "0.5156827934062291",
-         "0.484317206593771",
-         "25.932254976858808",
-         "25.131239681336695",
-         "0.5408319491755176",
-         "0.4591680508244824",
-         "65.66946043388896",
-         "60.50873997319026",
-         "0.5372970734998591",
-         "0.46270292650014067",
-         "49.92474277281219",
-         "46.329724913191235",
-         "1.0111221493302769",
-         "2.3435364138312256",
-         "1.4079042929536365",
-         "1.8150369321735171",
-         "-1.3247060105015471",
-         "-1.536262269517132",
-         "-0.3262742422874078",
-         "0.001740224449974727",
-         "0.37276391200656045",
-         "0.6169647521996646",
-         "0.19868340243362415",
-         "0.6541084755755231",
-         "0.6995561924779894",
-         "0.7606486011648124",
-         "-0.20750588743484477",
-         "-0.271255593845342",
-         "1.3974804758875194e-05",
-         "0.0028026028891459365",
-         "0.9973066259026493",
-         "1.2938775655633528",
-         "7.168335402987787",
-         "1.0565405907472671",
-         "1.3594640239698876",
-         "1.2503822087658851",
-         "1.9104139425663256",
-         "1.6520231762973352",
-         "1.83150319716469",
-         "2.400346806503476",
-         "0.8117375835196966"
+         "0.0025973296549108133",
+         "0.0065538959192360585",
+         "0.003985121227836887",
+         "0.0004921732222447568",
+         "0.013628520024228515",
+         "1.6445913548264868",
+         "0.48089564439753335",
+         "0.2924104173272092",
+         "-5.525187546164554",
+         "36.43733779733153",
+         "110.738494856825",
+         "0.3290394893342352",
+         "12676.376447624354",
+         "3.039148893718983",
+         "4.809965237821361",
+         "1346.2030965449",
+         "0.5168539325842697",
+         "0.5189393939393939",
+         "0.7226277372262774",
+         "0.06944444444444445",
+         "48.90386343216532",
+         "48.95724989018914",
+         "48.850814478635314",
+         "50.378787878787875",
+         "0.47519512881200865",
+         "0.5248048711879915",
+         "25.12185397556899",
+         "26.40065036363009",
+         "0.5379576069006902",
+         "0.4620423930993099",
+         "81.22180615842504",
+         "75.27305259864438",
+         "0.5318245590499932",
+         "0.4681754409500068",
+         "60.11692499956474",
+         "56.404905758014195",
+         "1.212153028422098",
+         "1.6837411538433322",
+         "1.3165886843619914",
+         "1.9629560119719596",
+         "-1.437557251912411",
+         "-2.2220511928992224",
+         "-0.11611241363640686",
+         "0.0027250125481889545",
+         "0.24438292649257246",
+         "1.0353425339336804",
+         "0.2129819479426438",
+         "0.9150463853798798",
+         "0.9461020349082953",
+         "1.0",
+         "0.5421376968092657",
+         "-0.354186470598068",
+         "7.233845935043539e-05",
+         "0.005533399013504765",
+         "1.180916107593351",
+         "1.8702927426527372",
+         "7.33480253270581",
+         "1.0898024461297635",
+         "1.4034300313678967",
+         "1.2731413506757119",
+         "2.084059573902941",
+         "1.8268946741951213",
+         "1.7383423160409388",
+         "2.6394247801174",
+         "0.8151265548897527"
         ]
        ],
        "shape": {
@@ -709,27 +707,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>741.570492</td>\n",
-       "      <td>68.272354</td>\n",
-       "      <td>18.412395</td>\n",
-       "      <td>66.351952</td>\n",
+       "      <td>792.775281</td>\n",
+       "      <td>82.660109</td>\n",
+       "      <td>48.482916</td>\n",
+       "      <td>71.059017</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>50.985711</td>\n",
-       "      <td>51.067603</td>\n",
+       "      <td>51.441404</td>\n",
+       "      <td>51.530177</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.293878</td>\n",
-       "      <td>7.168335</td>\n",
-       "      <td>1.056541</td>\n",
-       "      <td>1.359464</td>\n",
-       "      <td>1.250382</td>\n",
-       "      <td>1.910414</td>\n",
-       "      <td>1.652023</td>\n",
-       "      <td>1.831503</td>\n",
-       "      <td>2.400347</td>\n",
-       "      <td>0.811738</td>\n",
+       "      <td>1.870293</td>\n",
+       "      <td>7.334803</td>\n",
+       "      <td>1.089802</td>\n",
+       "      <td>1.40343</td>\n",
+       "      <td>1.273141</td>\n",
+       "      <td>2.08406</td>\n",
+       "      <td>1.826895</td>\n",
+       "      <td>1.738342</td>\n",
+       "      <td>2.639425</td>\n",
+       "      <td>0.815127</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -738,16 +736,16 @@
       ],
       "text/plain": [
        "   HRV_MeanNN   HRV_SDNN  HRV_SDANN1  HRV_SDNNI1  HRV_SDANN2  HRV_SDNNI2  \\\n",
-       "0  741.570492  68.272354   18.412395   66.351952         NaN         NaN   \n",
+       "0  792.775281  82.660109   48.482916   71.059017         NaN         NaN   \n",
        "\n",
        "   HRV_SDANN5  HRV_SDNNI5  HRV_RMSSD   HRV_SDSD  ...  HRV_SampEn  HRV_ShanEn  \\\n",
-       "0         NaN         NaN  50.985711  51.067603  ...    1.293878    7.168335   \n",
+       "0         NaN         NaN  51.441404  51.530177  ...    1.870293    7.334803   \n",
        "\n",
        "   HRV_FuzzyEn  HRV_MSEn  HRV_CMSEn  HRV_RCMSEn    HRV_CD   HRV_HFD   HRV_KFD  \\\n",
-       "0     1.056541  1.359464   1.250382    1.910414  1.652023  1.831503  2.400347   \n",
+       "0     1.089802   1.40343   1.273141     2.08406  1.826895  1.738342  2.639425   \n",
        "\n",
        "    HRV_LZC  \n",
-       "0  0.811738  \n",
+       "0  0.815127  \n",
        "\n",
        "[1 rows x 91 columns]"
       ]
@@ -767,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "bc5968bf",
    "metadata": {},
    "outputs": [
@@ -1061,66 +1059,66 @@
          "type": "float"
         }
        ],
-       "ref": "3dcdb960-a2ce-4daf-bc07-f1d1ecc1d23b",
+       "ref": "f30de082-d4b1-4928-92c2-b67905675d27",
        "rows": [
         [
          "0",
-         "36.11024861957306",
-         "89.29605616611106",
-         "0.4043879446635331",
-         "10130.074273105729",
-         "2.472872926100801",
-         "4.712582739555213",
-         "883.2711988030102",
-         "0.36065573770491804",
-         "0.34797297297297297",
-         "0.3786407766990291",
-         "0.010869565217391304",
-         "50.66468346193176",
-         "50.762459653173465",
-         "50.58161178363116",
-         "45.94594594594595",
-         "0.5156827934062291",
-         "0.484317206593771",
-         "25.932254976858808",
-         "25.131239681336695",
-         "0.5408319491755176",
-         "0.4591680508244824",
-         "65.66946043388896",
-         "60.50873997319026",
-         "0.5372970734998591",
-         "0.46270292650014067",
-         "49.92474277281219",
-         "46.329724913191235",
-         "1.0111221493302769",
-         "2.3435364138312256",
-         "1.4079042929536365",
-         "1.8150369321735171",
-         "-1.3247060105015471",
-         "-1.536262269517132",
-         "-0.3262742422874078",
-         "0.001740224449974727",
-         "0.37276391200656045",
-         "0.6169647521996646",
-         "0.19868340243362415",
-         "0.6541084755755231",
-         "0.6995561924779894",
-         "0.7606486011648124",
-         "-0.20750588743484477",
-         "-0.271255593845342",
-         "1.3974804758875194e-05",
-         "0.0028026028891459365",
-         "0.9973066259026493",
-         "1.2938775655633528",
-         "7.168335402987787",
-         "1.0565405907472671",
-         "1.3594640239698876",
-         "1.2503822087658851",
-         "1.9104139425663256",
-         "1.6520231762973352",
-         "1.83150319716469",
-         "2.400346806503476",
-         "0.8117375835196966"
+         "36.43733779733153",
+         "110.738494856825",
+         "0.3290394893342352",
+         "12676.376447624354",
+         "3.039148893718983",
+         "4.809965237821361",
+         "1346.2030965449",
+         "0.5168539325842697",
+         "0.5189393939393939",
+         "0.7226277372262774",
+         "0.06944444444444445",
+         "48.90386343216532",
+         "48.95724989018914",
+         "48.850814478635314",
+         "50.378787878787875",
+         "0.47519512881200865",
+         "0.5248048711879915",
+         "25.12185397556899",
+         "26.40065036363009",
+         "0.5379576069006902",
+         "0.4620423930993099",
+         "81.22180615842504",
+         "75.27305259864438",
+         "0.5318245590499932",
+         "0.4681754409500068",
+         "60.11692499956474",
+         "56.404905758014195",
+         "1.212153028422098",
+         "1.6837411538433322",
+         "1.3165886843619914",
+         "1.9629560119719596",
+         "-1.437557251912411",
+         "-2.2220511928992224",
+         "-0.11611241363640686",
+         "0.0027250125481889545",
+         "0.24438292649257246",
+         "1.0353425339336804",
+         "0.2129819479426438",
+         "0.9150463853798798",
+         "0.9461020349082953",
+         "1.0",
+         "0.5421376968092657",
+         "-0.354186470598068",
+         "7.233845935043539e-05",
+         "0.005533399013504765",
+         "1.180916107593351",
+         "1.8702927426527372",
+         "7.33480253270581",
+         "1.0898024461297635",
+         "1.4034300313678967",
+         "1.2731413506757119",
+         "2.084059573902941",
+         "1.8268946741951213",
+         "1.7383423160409388",
+         "2.6394247801174",
+         "0.8151265548897527"
         ]
        ],
        "shape": {
@@ -1173,27 +1171,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>36.110249</td>\n",
-       "      <td>89.296056</td>\n",
-       "      <td>0.404388</td>\n",
-       "      <td>10130.074273</td>\n",
-       "      <td>2.472873</td>\n",
-       "      <td>4.712583</td>\n",
-       "      <td>883.271199</td>\n",
-       "      <td>0.360656</td>\n",
-       "      <td>0.347973</td>\n",
-       "      <td>0.378641</td>\n",
+       "      <td>36.437338</td>\n",
+       "      <td>110.738495</td>\n",
+       "      <td>0.329039</td>\n",
+       "      <td>12676.376448</td>\n",
+       "      <td>3.039149</td>\n",
+       "      <td>4.809965</td>\n",
+       "      <td>1346.203097</td>\n",
+       "      <td>0.516854</td>\n",
+       "      <td>0.518939</td>\n",
+       "      <td>0.722628</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.293878</td>\n",
-       "      <td>7.168335</td>\n",
-       "      <td>1.056541</td>\n",
-       "      <td>1.359464</td>\n",
-       "      <td>1.250382</td>\n",
-       "      <td>1.910414</td>\n",
-       "      <td>1.652023</td>\n",
-       "      <td>1.831503</td>\n",
-       "      <td>2.400347</td>\n",
-       "      <td>0.811738</td>\n",
+       "      <td>1.870293</td>\n",
+       "      <td>7.334803</td>\n",
+       "      <td>1.089802</td>\n",
+       "      <td>1.40343</td>\n",
+       "      <td>1.273141</td>\n",
+       "      <td>2.08406</td>\n",
+       "      <td>1.826895</td>\n",
+       "      <td>1.738342</td>\n",
+       "      <td>2.639425</td>\n",
+       "      <td>0.815127</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1201,17 +1199,17 @@
        "</div>"
       ],
       "text/plain": [
-       "     HRV_SD1    HRV_SD2  HRV_SD1SD2         HRV_S   HRV_CSI   HRV_CVI  \\\n",
-       "0  36.110249  89.296056    0.404388  10130.074273  2.472873  4.712583   \n",
+       "     HRV_SD1     HRV_SD2  HRV_SD1SD2         HRV_S   HRV_CSI   HRV_CVI  \\\n",
+       "0  36.437338  110.738495    0.329039  12676.376448  3.039149  4.809965   \n",
        "\n",
        "   HRV_CSI_Modified   HRV_PIP  HRV_IALS   HRV_PSS  ...  HRV_SampEn  \\\n",
-       "0        883.271199  0.360656  0.347973  0.378641  ...    1.293878   \n",
+       "0       1346.203097  0.516854  0.518939  0.722628  ...    1.870293   \n",
        "\n",
        "   HRV_ShanEn  HRV_FuzzyEn  HRV_MSEn  HRV_CMSEn  HRV_RCMSEn    HRV_CD  \\\n",
-       "0    7.168335     1.056541  1.359464   1.250382    1.910414  1.652023   \n",
+       "0    7.334803     1.089802   1.40343   1.273141     2.08406  1.826895   \n",
        "\n",
        "    HRV_HFD   HRV_KFD   HRV_LZC  \n",
-       "0  1.831503  2.400347  0.811738  \n",
+       "0  1.738342  2.639425  0.815127  \n",
        "\n",
        "[1 rows x 56 columns]"
       ]
@@ -1232,7 +1230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brain-heart",
+   "display_name": "neurocomp",
    "language": "python",
    "name": "python3"
   },
@@ -1246,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
