--- a/code/digitspan/transcriptor_set_parquet.ipynb
+++ b/code/digitspan/transcriptor_set_parquet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "46be07e7",
    "metadata": {},
    "outputs": [
@@ -92,11 +92,15 @@
     "            \n",
     "            # Stamp events onto the time series\n",
     "            for _, row in events.iterrows():\n",
+    "                # Get the label (prioritize 'value' as it has specific descriptions like 'eyes opened')\n",
+    "                label = row.get('value', row.get('trial_type', 'event'))\n",
+    "                \n",
+    "                # SKIP 'boundary' events so they don't overwrite the baseline label\n",
+    "                if label == 'boundary':\n",
+    "                    continue\n",
+    "\n",
     "                # Find rows in the signal that fall within the event duration\n",
     "                mask = (df['time'] >= row['onset']) & (df['time'] <= (row['onset'] + row['duration']))\n",
-    "                \n",
-    "                # Get the label (column name is usually 'trial_type' or 'value')\n",
-    "                label = row.get('trial_type', row.get('value', 'event'))\n",
     "                \n",
     "                if row['duration'] == 0:\n",
     "                    # For instant markers, find the nearest single sample\n",
@@ -126,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brain-heart",
+   "display_name": "neurocomp",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
