--- a/code/digitspan/transcriptor_set_parquet_rest.ipynb
+++ b/code/digitspan/transcriptor_set_parquet_rest.ipynb
@@ -1401,11 +1401,152 @@
     "print(f\"   📊 Total:      {len(subject_folders)}\")\n",
     "print(\"=\" * 60)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd23be3e",
+   "metadata": {},
+   "source": [
+    "# V2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faec11de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mne\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# --- 1. Setup Paths ---\n",
+    "scripts_folder = Path.cwd()\n",
+    "\n",
+    "# Go up two levels to find the root, then down to data\n",
+    "root_folder = scripts_folder.parent.parent\n",
+    "dataset_path = root_folder / 'data' / 'ds003838'\n",
+    "\n",
+    "# Create output folder\n",
+    "output_folder = scripts_folder / 'rest_data'\n",
+    "output_folder.mkdir(exist_ok=True)\n",
+    "\n",
+    "print(f\"📂 Reading data from: {dataset_path}\")\n",
+    "print(f\"💾 Saving output to:  {output_folder}\")\n",
+    "print()\n",
+    "\n",
+    "# Exclude subjects with missing physiological data\n",
+    "excluded_subjects = {\n",
+    "    'sub-013', 'sub-014', 'sub-015', 'sub-016', 'sub-017', 'sub-018',\n",
+    "    'sub-019', 'sub-020', 'sub-021', 'sub-022', 'sub-023', 'sub-024',\n",
+    "    'sub-025', 'sub-026', 'sub-027', 'sub-028', 'sub-029', 'sub-030',\n",
+    "    'sub-031', 'sub-037', 'sub-066', 'sub-094'\n",
+    "}\n",
+    "\n",
+    "task = 'rest'\n",
+    "\n",
+    "# --- 2. Find All Subjects ---\n",
+    "all_subject_folders = sorted([f for f in dataset_path.glob('sub-*') if f.is_dir()])\n",
+    "subject_folders = [f for f in all_subject_folders if f.name not in excluded_subjects]\n",
+    "print(f\"🔍 Found {len(all_subject_folders)} subjects total\")\n",
+    "print(f\"❌ Excluding {len(excluded_subjects)} subjects with missing data\")\n",
+    "print(f\"✅ Processing {len(subject_folders)} subjects with complete data\")\n",
+    "print()\n",
+    "\n",
+    "# --- 3. Process Each Subject ---\n",
+    "successful = 0\n",
+    "failed = 0\n",
+    "skipped = 0\n",
+    "\n",
+    "for subject_path in subject_folders:\n",
+    "    subject_id = subject_path.name\n",
+    "    ecg_folder = subject_path / 'ecg'\n",
+    "\n",
+    "    # Check if ECG folder exists\n",
+    "    if not ecg_folder.exists():\n",
+    "        print(f\"⏭️  {subject_id}: No ECG folder, skipping\")\n",
+    "        skipped += 1\n",
+    "        continue\n",
+    "\n",
+    "    # Build file paths\n",
+    "    set_filename = f\"{subject_id}_task-{task}_ecg.set\"\n",
+    "    set_path = ecg_folder / set_filename\n",
+    "\n",
+    "    if not set_path.exists():\n",
+    "        print(f\"⏭️  {subject_id}: No .set file, skipping\")\n",
+    "        skipped += 1\n",
+    "        continue\n",
+    "\n",
+    "    print(f\"⏳ {subject_id}: Loading...\")\n",
+    "    try:\n",
+    "        # Load the binary file with MNE\n",
+    "        raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n",
+    "\n",
+    "        # Sampling frequency (should be 1000 Hz for this dataset)\n",
+    "        sfreq = raw.info[\"sfreq\"]\n",
+    "\n",
+    "        # Pick ECG channel only\n",
+    "        ecg_picks = mne.pick_types(raw.info, ecg=True)\n",
+    "\n",
+    "        if len(ecg_picks) == 0:\n",
+    "            raise RuntimeError(\"No ECG channel found in Raw object\")\n",
+    "\n",
+    "        # Get data in Volts (MNE's internal unit)\n",
+    "        ecg_data, times = raw.get_data(picks=ecg_picks, return_times=True)\n",
+    "        ecg = ecg_data[0]  # shape: (n_samples,)\n",
+    "\n",
+    "        # --- Prepare signal for NeuroKit2 ---\n",
+    "\n",
+    "        # 1) Detrend (linear) to remove slow drift\n",
+    "        ecg_detrended = mne.filter.detrend(ecg, order=1)\n",
+    "\n",
+    "        # 2) Z-score\n",
+    "        ecg_z = (ecg_detrended - np.mean(ecg_detrended)) / np.std(ecg_detrended)\n",
+    "\n",
+    "        # 3) Ensure R-peaks are positive (flip polarity if negative dominates)\n",
+    "        pos_energy = np.mean(ecg_z[ecg_z > 0] ** 2) if np.any(ecg_z > 0) else 0\n",
+    "        neg_energy = np.mean(ecg_z[ecg_z < 0] ** 2) if np.any(ecg_z < 0) else 0\n",
+    "\n",
+    "        if neg_energy > pos_energy:\n",
+    "            ecg_z = -ecg_z\n",
+    "\n",
+    "        # Build DataFrame: raw Volts + NK-ready standardized signal\n",
+    "        df = pd.DataFrame({\n",
+    "            \"time\": times,           # seconds\n",
+    "            \"ecg_raw\": ecg,          # Volts, straight from MNE\n",
+    "            \"ecg_nk\": ecg_z          # detrended, z-scored, polarity-fixed\n",
+    "        })\n",
+    "\n",
+    "        # Save as Parquet\n",
+    "        parquet_filename = f\"{subject_id}_task-{task}_ecg_rest.parquet\"\n",
+    "        output_path = output_folder / parquet_filename\n",
+    "        df.to_parquet(output_path, index=False)\n",
+    "\n",
+    "        print(f\"✅ {subject_id}: Success! ({df.shape[0]} samples)\")\n",
+    "        print(f\"   Sampling rate: {sfreq} Hz (use this in NeuroKit2)\")\n",
+    "        successful += 1\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ {subject_id}: Error - {e}\")\n",
+    "        failed += 1\n",
+    "\n",
+    "# --- 4. Summary ---\n",
+    "print()\n",
+    "print(\"=\" * 60)\n",
+    "print(\"🎯 Processing Complete!\")\n",
+    "print(f\"   ✅ Successful: {successful}\")\n",
+    "print(f\"   ❌ Failed:     {failed}\")\n",
+    "print(f\"   ⏭️  Skipped:    {skipped}\")\n",
+    "print(f\"   📊 Total:      {len(subject_folders)}\")\n",
+    "print(\"=\" * 60)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brain-heart",
+   "display_name": "neurocomp",
    "language": "python",
    "name": "python3"
   },
@@ -1419,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
