--- a/code/digitspan/visualize_ecg_events.ipynb
+++ b/code/digitspan/visualize_ecg_events.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "125fb481",
    "metadata": {},
    "outputs": [],
@@ -92,9 +92,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_76095/1203144154.py:10: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
+      "/tmp/ipykernel_120328/1203144154.py:10: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n",
-      "/tmp/ipykernel_76095/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
+      "/tmp/ipykernel_120328/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n"
      ]
     }
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_76095/2657081329.py:29: RuntimeWarning: Limited 2 annotation(s) that were expanding outside the data range.\n",
+      "/tmp/ipykernel_120328/2657081329.py:29: RuntimeWarning: Limited 2 annotation(s) that were expanding outside the data range.\n",
       "  raw.set_annotations(annotations)\n"
      ]
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "699031ae",
    "metadata": {},
    "outputs": [
@@ -190,18 +190,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Plotting data... \n"
+      "📊 Plotting data... \n",
+      "Using qt as 2D backend.\n",
+      "Using qt as 2D backend.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f2824a03800>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fa3599c3e30>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels marked as bad:\n",
+      "none\n"
+     ]
     }
    ],
    "source": [
