various fixes, inlcuding polarization flip, and visualizations

--- a/code/digitspan/visualize_ecg_events.ipynb
+++ b/code/digitspan/visualize_ecg_events.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Data folder: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
+      "📂 Data folder: /home/martin/RESEARCH/thesis/code/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martin/miniforge3/envs/neurocomp/lib/python3.12/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
+      "/home/martin/miniforge3/envs/brain-heart/lib/python3.11/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
       "  warn(\n"
      ]
     },
@@ -92,9 +92,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_120328/1203144154.py:10: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
+      "/tmp/ipykernel_140639/1203144154.py:10: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n",
-      "/tmp/ipykernel_120328/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
+      "/tmp/ipykernel_140639/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n"
      ]
     }
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_120328/2657081329.py:29: RuntimeWarning: Limited 2 annotation(s) that were expanding outside the data range.\n",
+      "/tmp/ipykernel_140639/2657081329.py:29: RuntimeWarning: Limited 2 annotation(s) that were expanding outside the data range.\n",
       "  raw.set_annotations(annotations)\n"
      ]
     }
@@ -182,6 +182,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "4f4279bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ecg_picks = mne.pick_types(raw.info, eeg=True)\n",
+    "len(ecg_picks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c38e43ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] ['ECG']\n",
+      "[-1] ['ECG']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set ECG type and pick it\n",
+    "ecg_ch = \"ECG\"\n",
+    "raw.set_channel_types({ecg_ch: \"ecg\"})\n",
+    "ecg_picks = mne.pick_channels(raw.info[\"ch_names\"], include=[ecg_ch])\n",
+    "print(ecg_picks, [raw.ch_names[i] for i in ecg_picks])\n",
+    "\n",
+    "# Alternatively, pick by type after setting\n",
+    "ecg_picks = mne.pick_types(raw.info, ecg=True)\n",
+    "ecg_picks = -ecg_picks\n",
+    "print(ecg_picks, [raw.ch_names[i] for i in ecg_picks])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bde9af1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d78437a30>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Invert polarity of the ECG channel to get positive R-peaks\n",
+    "raw.apply_function(lambda x: -x, picks=[ecg_ch])\n",
+    "\n",
+    "# Verify by plotting the single ECG channel\n",
+    "raw.copy().pick_channels([ecg_ch]).plot(duration=60, scalings='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4dd8121e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d786ef640>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw.copy().pick_channels([ecg_ch]).plot(duration=60, scalings='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "699031ae",
    "metadata": {},
@@ -191,7 +301,6 @@
      "output_type": "stream",
      "text": [
       "📊 Plotting data... \n",
-      "Using qt as 2D backend.\n",
       "Using qt as 2D backend.\n"
      ]
     },
@@ -199,16 +308,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n",
-      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
-      "QFont::fromString: Invalid description 'Noto Sans Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
-      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n"
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fa3599c3e30>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d93cc3c70>"
       ]
      },
      "execution_count": 5,
@@ -219,6 +325,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n",
       "Channels marked as bad:\n",
       "none\n"
      ]
@@ -235,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neurocomp",
+   "display_name": "brain-heart",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
