--- a/code/python/model_sdg_psv.ipynb
+++ b/code/python/model_sdg_psv.ipynb
@@ -397,8 +397,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "brain-heart",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
